fixed text aligment and spacing

--- a/style.css
+++ b/style.css
@@ -18,3 +18,8 @@
      margin:15px 30px 0px 30px;
      box-shadow: 1px 1px 12px 3px black;
    }
+  
+  .webportfolio {
+    align-items: center;
+    display: inline-block;
+  }
